plugins {
	id 'java-library'
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(23)
	}
}

version = '1.0'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.apache.commons:commons-collections4:4.4'
	implementation 'com.google.guava:guava:31.1-jre'
	implementation 'ch.qos.logback:logback-classic:1.2.11'
	implementation 'org.slf4j:slf4j-api:1.7.36'
	implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
	implementation group: 'junit', name: 'junit', version: '4.13.1'
}

test {
	systemProperties 'property': 'value'
}

sourceSets {
    test {
        java.srcDir file('src/main/java')
        resources.srcDir file('src/main/resources')
    }
}

